--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-header{
+header {
     position: sticky;
     top: 0px;
     background-color: #60b4df;
@@ -27,7 +27,7 @@ header{
     z-index: 1000;
 }
 
-section{
+section {
     position: relative;
     height: calc(100vh - 3rem);
     width: 100%;
@@ -35,7 +35,7 @@ section{
     overflow: hidden;
 }
 
-.overlay{
+.overlay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -44,7 +44,7 @@ section{
     background-color: rgb(56, 165, 238, 0.5);
 }
 
-.container{
+.container {
     max-width: 65rem;
     padding: 0 2rem;
     margin: 0 auto;
@@ -52,29 +52,29 @@ section{
     position: relative;
 }
 
-.logo-container{
+.logo-container {
     flex: 1;
     display: flex;
     align-items: center;
 }
 
-.nav-btn{
+.nav-btn {
     flex: 3;
     display: flex;
 }
 
-.nav-links{
+.nav-links {
     flex: 2;
 }
 
-.log-sign{
+.log-sign {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
 }
 
-.logo{
+.logo {
     color: #fff;
     font-size: 1.1rem;
     font-weight: 600;
@@ -83,11 +83,11 @@ section{
     line-height: 3rem;
 }
 
-.logo span{
+.logo span {
     font-weight: 300;
 }
 
-.btn{
+.btn {
     display: inline-block;
     padding: .5rem 1.3rem;
     font-size: .8rem;
@@ -99,27 +99,29 @@ section{
     text-transform: uppercase;
 }
 
-.btn.solid, .btn.transparent:hover{
+.btn.solid,
+.btn.transparent:hover {
     background-color: #fff;
     color: #69bde7;
 }
 
-.btn.transparent, .btn.solid:hover{
+.btn.transparent,
+.btn.solid:hover {
     background-color: transparent;
     color: #fff;
 }
 
-.nav-links > ul{
+.nav-links>ul {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.nav-link{
+.nav-link {
     position: relative;
 }
 
-.nav-link > a{
+.nav-link>a {
     line-height: 3rem;
     color: #fff;
     padding: 0 .8rem;
@@ -131,15 +133,15 @@ section{
     transition: .5s;
 }
 
-.nav-link > a > i{
+.nav-link>a>i {
     margin-left: .2rem;
 }
 
-.nav-link:hover > a{
+.nav-link:hover>a {
     transform: scale(1.1);
 }
 
-.dropdown{
+.dropdown {
     position: absolute;
     top: 100%;
     left: 0;
@@ -150,11 +152,11 @@ section{
     transition: .5s;
 }
 
-.dropdown ul{
+.dropdown ul {
     position: relative;
 }
 
-.dropdown-link > a{
+.dropdown-link>a {
     display: flex;
     background-color: #fff;
     color: #3498db;
@@ -165,20 +167,20 @@ section{
     transition: .3s;
 }
 
-.dropdown-link:hover > a{
+.dropdown-link:hover>a {
     background-color: #3498db;
     color: #fff;
 }
 
-.dropdown-link:not(:nth-last-child(2)){
+.dropdown-link:not(:nth-last-child(2)) {
     border-bottom: 1px solid #efefef;
 }
 
-.dropdown-link i{
+.dropdown-link i {
     transform: rotate(-90deg);
 }
 
-.arrow{
+.arrow {
     position: absolute;
     width: 11px;
     height: 11px;
@@ -191,15 +193,23 @@ section{
     z-index: -1;
 }
 
-.dropdown-link:first-child:hover ~ .arrow{
+.dropdown-link:first-child:hover~.arrow {
     background-color: #3498db;
 }
 
-.dropdown-link{
+.dropdown-link {
     position: relative;
 }
 
-.dropdown.second{
+.dropdown-link .show-dropdown {
+    opacity: 1;
+}
+
+.show-dropdown .dropdown-link>a {
+    padding: .5rem 1.5rem;
+}
+
+.dropdown.second {
     top: 0;
     left: 100%;
     padding-left: .8rem;
@@ -207,26 +217,26 @@ section{
     transform: translateX(10px);
 }
 
-.dropdown.second .arrow{
+.dropdown.second .arrow {
     top: 10px;
     left: -5.5px;
 }
 
-.nav-link:hover > .dropdown,
-.dropdown-link:hover > .dropdown{
+.nav-link:hover>.dropdown,
+.dropdown-link:hover>.dropdown {
     transform: translate(0, 0);
     opacity: 1;
     pointer-events: auto;
 }
 
-.hamburger-menu-container{
+.hamburger-menu-container {
     flex: 1;
     display: none;
     align-items: center;
     justify-content: flex-end;
 }
 
-.hamburger-menu{
+.hamburger-menu {
     width: 2.5rem;
     height: 2.5rem;
     display: flex;
@@ -234,7 +244,7 @@ section{
     justify-content: flex-end;
 }
 
-.hamburger-menu div{
+.hamburger-menu div {
     width: 1.6rem;
     height: 3px;
     border-radius: 3px;
@@ -245,7 +255,7 @@ section{
 }
 
 .hamburger-menu div:before,
-.hamburger-menu div:after{
+.hamburger-menu div:after {
     content: '';
     position: absolute;
     width: inherit;
@@ -255,15 +265,15 @@ section{
     transition: .5s;
 }
 
-.hamburger-menu div:before{
+.hamburger-menu div:before {
     transform: translateY(-7px);
 }
 
-.hamburger-menu div:after{
+.hamburger-menu div:after {
     transform: translateY(7px);
 }
 
-#check{
+#check {
     position: absolute;
     top: 50%;
     right: 1.5rem;
@@ -276,45 +286,46 @@ section{
     display: none;
 }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div{
+#check:checked~.hamburger-menu-container .hamburger-menu div {
     background-color: transparent;
 }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:before{
+#check:checked~.hamburger-menu-container .hamburger-menu div:before {
     transform: translateY(0) rotate(-45deg);
 }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:after{
+#check:checked~.hamburger-menu-container .hamburger-menu div:after {
     transform: translateY(0) rotate(45deg);
 }
 
-@keyframes animation{
-    from{
+@keyframes animation {
+    from {
         opacity: 0;
         transform: translateY(15px);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translateY(0px);
     }
 }
 
-@media (max-width: 920px){
-    .hamburger-menu-container{
+@media (max-width: 920px) {
+    .hamburger-menu-container {
         display: flex;
     }
 
-    #check{
+    #check {
         display: block;
     }
 
-    .nav-btn{
+    .nav-btn {
         position: fixed;
         height: calc(100vh - 3rem);
         top: 3rem;
         left: 0;
         width: 100%;
-        background-color: #69bde7;
+        background-color: #b969e7;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
@@ -324,41 +335,43 @@ section{
         transition: .65s;
     }
 
-    #check:checked ~ .nav-btn{
+    #check:checked~.nav-btn {
         transform: translateX(0);
     }
 
-    #check:checked ~ .nav-btn .nav-link,
-    #check:checked ~ .nav-btn .log-sign{
+    #check:checked~.nav-btn .nav-link,
+    #check:checked~.nav-btn .log-sign {
         animation: animation .5s ease forwards var(--i);
     }
 
-    .nav-links{
+    .nav-links {
         flex: initial;
         width: 100%;
     }
 
-    .nav-links > ul{
+    .nav-links>ul {
         flex-direction: column;
     }
 
-    .nav-link{
+    .nav-link {
         width: 100%;
         opacity: 0;
         transform: translateY(15px);
     }
 
-    .nav-link > a{
+    .nav-link>a {
         line-height: 1;
         padding: 1.6rem 2rem;
     }
 
-    .nav-link:hover > a{
+    .nav-link:hover>a {
         transform: scale(1);
         background-color: #50a9d6;
     }
 
-    .dropdown, .dropdown.second{
+    .dropdown,
+    .dropdown.second,
+    .show-dropdown {
         position: initial;
         top: initial;
         left: initial;
@@ -370,37 +383,42 @@ section{
         background-color: #3183ac;
         display: none;
     }
-    
-    .nav-link:hover > .dropdown,
-    .dropdown-link:hover > .dropdown{
+
+    .nav-link:hover>.dropdown,
+    .dropdown-link:hover>.dropdown,
+    .dropdown-link:hover>.show-dropdown {
         display: block;
     }
 
-    .nav-link:hover > a > i,
-    .dropdown-link:hover > a > i{
+    .nav-link:hover>a>i,
+    .dropdown-link:hover>a>i {
         transform: rotate(360deg);
     }
 
-    .dropdown-link > a{
+    .dropdown-link>a {
         background-color: transparent;
         color: #fff;
         padding: 1.2rem 2rem;
         line-height: 1;
     }
 
-    .dropdown.second .dropdown-link > a{
+    .show-dropdown .dropdown-link>a {
         padding: 1.2rem 2rem 1.2rem 3rem;
     }
 
-    .dropdown.second .dropdown.second .dropdown-link > a{
+    .dropdown.second .dropdown-link>a {
+        padding: 1.2rem 2rem 1.2rem 3rem;
+    }
+
+    .dropdown.second .dropdown.second .dropdown-link>a {
         padding: 1.2rem 2rem 1.2rem 4rem;
     }
 
-    .dropdown-link:not(:nth-last-child(2)){
+    .dropdown-link:not(:nth-last-child(2)) {
         border-bottom: none;
     }
 
-    .arrow{
+    .arrow {
         z-index: 1;
         background-color: #69bde7;
         left: 10%;
@@ -408,34 +426,38 @@ section{
         transition: .5s;
     }
 
-    .nav-link:hover .arrow{
+    .nav-link:hover .arrow {
         background-color: #50a9d6;
     }
 
-    .dropdown .dropdown .arrow{
+    .dropdown .dropdown .arrow {
         display: none;
     }
 
-    .dropdown-link:hover > a{
+    .dropdown .show-dropdown .arrow {
+        display: none;
+    }
+
+    .dropdown-link:hover>a {
         background-color: #3a91bd;
     }
 
-    .dropdown-link:first-child:hover ~ .arrow{
+    .dropdown-link:first-child:hover~.arrow {
         background-color: #50a9d6;
     }
 
-    .nav-link > a > i{
+    .nav-link>a>i {
         font-size: 1.1rem;
         transform: rotate(-90deg);
         transition: .7s;
     }
 
-    .dropdown i{
+    .dropdown i {
         font-size: 1rem;
         transition: .7s;
     }
 
-    .log-sign{
+    .log-sign {
         flex: initial;
         width: 100%;
         padding: 1.5rem 1.9rem;
