--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ section {
     background-color: rgb(56, 165, 238, 0.5);
 }
 
-.container {
+.nav-bar {
     max-width: 65rem;
     padding: 0 2rem;
     margin: 0 auto;
     display: flex;
-    position: relative;
+    position: sticky;
 }
 
 .logo-container {
