--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ section {
     padding: 0 2rem;
     margin: 0 auto;
     display: flex;
-    position: sticky;
+    position: relative;
 }
 
 .logo-container {
